// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectLocationForm renders correctly with default empty values 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-1"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
      >
        <fieldset
          class="MuiFormControl-root MuiFormControl-fullWidth"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined Mui-required Mui-required"
            data-shrink="false"
            id="nrm-region-select-label"
          >
            NRM Region
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               *
            </span>
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          >
            <div
              aria-haspopup="listbox"
              aria-label="NRM Region"
              aria-labelledby="nrm-region-select-label nrm-region-select"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
              id="nrm-region-select"
              role="button"
              tabindex="0"
            >
              <span>
                ​
              </span>
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              name="location.region"
              required=""
              tabindex="-1"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-2 MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled-4"
              >
                <span>
                  NRM Region
                </span>
              </legend>
            </fieldset>
          </div>
          <p
            class="MuiFormHelperText-root MuiFormHelperText-contained Mui-required"
          />
        </fieldset>
      </div>
    </div>
  </div>
  <div
    class="MuiBox-root MuiBox-root-6"
  >
    <fieldset
      class="MuiFormControl-root"
    >
      <legend
        class="MuiFormLabel-root Mui-required"
      >
        Is this location a priority area?
        <span
          aria-hidden="true"
          class="MuiFormLabel-asterisk"
        >
           *
        </span>
      </legend>
      <div
        class="MuiBox-root MuiBox-root-7"
      >
        <div
          aria-label="Location Priority"
          class="MuiFormGroup-root"
          role="radiogroup"
        >
          <label
            class="MuiFormControlLabel-root"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-8 MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-checked-9 Mui-checked MuiIconButton-colorPrimary"
            >
              <span
                class="MuiIconButton-label"
              >
                <input
                  checked=""
                  class="PrivateSwitchBase-input-11"
                  name="location.priority"
                  required=""
                  type="radio"
                  value="false"
                />
                <div
                  class="PrivateRadioButtonIcon-root-12 PrivateRadioButtonIcon-checked-14"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-13 MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                    />
                  </svg>
                </div>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
            <span
              class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
            >
              No
            </span>
          </label>
          <label
            class="MuiFormControlLabel-root"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-8 MuiRadio-root MuiRadio-colorPrimary MuiIconButton-colorPrimary"
            >
              <span
                class="MuiIconButton-label"
              >
                <input
                  class="PrivateSwitchBase-input-11"
                  name="location.priority"
                  required=""
                  type="radio"
                  value="true"
                />
                <div
                  class="PrivateRadioButtonIcon-root-12"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-13 MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                    />
                  </svg>
                </div>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
            <span
              class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
            >
              Yes
            </span>
          </label>
          <p
            class="MuiFormHelperText-root Mui-required"
          />
        </div>
      </div>
    </fieldset>
  </div>
  <fieldset
    class="MuiBox-root MuiBox-root-15"
  >
    <legend
      class="MuiTypography-root MuiTypography-body1"
    >
      Project Boundary
    </legend>
    <div
      class="MuiBox-root MuiBox-root-16"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
      >
        Upload a shapefile or use the drawing tools on the map to define your project boundary (KML or shapefiles accepted).
      </p>
    </div>
    <div
      class="MuiBox-root MuiBox-root-17"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-outlinedSizeLarge MuiButton-sizeLarge"
        data-testid="project-boundary-upload"
        role="button"
        tabindex="0"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeLarge"
          >
            <svg
              role="presentation"
              style="width: 1.5rem; height: 1.5rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M2 12H4V17H20V12H22V17C22 18.11 21.11 19 20 19H4C2.9 19 2 18.11 2 17V12M12 2L6.46 7.46L7.88 8.88L11 5.75V15H13V5.75L16.13 8.88L17.55 7.45L12 2Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          Upload Boundary
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
    </div>
    <div
      class="MuiBox-root MuiBox-root-18"
    >
      <div
        class="leaflet-container leaflet-grab leaflet-touch-drag"
        id="project_location_map"
        style="height: 100%; position: relative;"
        tabindex="0"
      >
        <div
          class="leaflet-pane leaflet-map-pane"
          style="left: 0px; top: 0px;"
        >
          <div
            class="leaflet-pane leaflet-tile-pane"
          >
            <div
              class="leaflet-layer "
              style="z-index: 1;"
            >
              <div
                class="leaflet-tile-container leaflet-zoom-animated"
                style="z-index: 18; left: 0px; top: 0px;"
              >
                <img
                  alt=""
                  class="leaflet-tile"
                  role="presentation"
                  src="https://maps.gov.bc.ca/arcgis/rest/services/province/roads_wm/MapServer/tile/5/10/4"
                  style="width: 256px; height: 256px; left: -159px; top: -31px;"
                />
              </div>
            </div>
          </div>
          <div
            class="leaflet-pane leaflet-shadow-pane"
          />
          <div
            class="leaflet-pane leaflet-overlay-pane"
          />
          <div
            class="leaflet-pane leaflet-marker-pane"
          />
          <div
            class="leaflet-pane leaflet-tooltip-pane"
          />
          <div
            class="leaflet-pane leaflet-popup-pane"
          />
        </div>
        <div
          class="leaflet-control-container"
        >
          <div
            class="leaflet-top leaflet-left"
          >
            <div
              class="leaflet-control-zoom leaflet-bar leaflet-control"
            >
              <a
                aria-label="Zoom in"
                class="leaflet-control-zoom-in"
                href="#"
                role="button"
                title="Zoom in"
              >
                +
              </a>
              <a
                aria-label="Zoom out"
                class="leaflet-control-zoom-out"
                href="#"
                role="button"
                title="Zoom out"
              >
                −
              </a>
            </div>
            <div
              class="leaflet-control-fullscreen leaflet-bar leaflet-control"
            >
              <a
                class="leaflet-control-fullscreen-button leaflet-bar-part"
                href="#"
                title="View Fullscreen"
              />
            </div>
          </div>
          <div
            class="leaflet-top leaflet-right"
          >
            <div
              class="leaflet-draw leaflet-control"
            >
              <div
                class="leaflet-draw-section"
              >
                <div
                  class="leaflet-draw-toolbar leaflet-bar leaflet-draw-toolbar-top"
                >
                  <a
                    class="leaflet-draw-draw-polyline"
                    href="#"
                    title="Draw a polyline"
                  >
                    <span
                      class="sr-only"
                    >
                      Draw a polyline
                    </span>
                  </a>
                  <a
                    class="leaflet-draw-draw-polygon"
                    href="#"
                    title="Draw a polygon"
                  >
                    <span
                      class="sr-only"
                    >
                      Draw a polygon
                    </span>
                  </a>
                  <a
                    class="leaflet-draw-draw-rectangle"
                    href="#"
                    title="Draw a rectangle"
                  >
                    <span
                      class="sr-only"
                    >
                      Draw a rectangle
                    </span>
                  </a>
                  <a
                    class="leaflet-draw-draw-marker"
                    href="#"
                    title="Draw a marker"
                  >
                    <span
                      class="sr-only"
                    >
                      Draw a marker
                    </span>
                  </a>
                  <a
                    class="leaflet-draw-draw-circlemarker"
                    href="#"
                    title="Draw a circlemarker"
                  >
                    <span
                      class="sr-only"
                    >
                      Draw a circlemarker
                    </span>
                  </a>
                </div>
                <ul
                  class="leaflet-draw-actions"
                />
              </div>
              <div
                class="leaflet-draw-section"
              >
                <div
                  class="leaflet-draw-toolbar leaflet-bar"
                >
                  <a
                    class="leaflet-draw-edit-edit leaflet-disabled"
                    href="#"
                    title="No layers to edit"
                  >
                    <span
                      class="sr-only"
                    >
                      Edit layers
                    </span>
                  </a>
                  <a
                    class="leaflet-draw-edit-remove leaflet-disabled"
                    href="#"
                    title="No layers to delete"
                  >
                    <span
                      class="sr-only"
                    >
                      Delete layers
                    </span>
                  </a>
                </div>
                <ul
                  class="leaflet-draw-actions"
                />
              </div>
            </div>
          </div>
          <div
            class="leaflet-bottom leaflet-left"
          />
          <div
            class="leaflet-bottom leaflet-right"
          >
            <div
              aria-haspopup="true"
              class="leaflet-control-layers leaflet-control"
            >
              <a
                class="leaflet-control-layers-toggle"
                href="#"
                title="Layers"
              />
              <section
                class="leaflet-control-layers-list"
              >
                <div
                  class="leaflet-control-layers-base"
                >
                  <label>
                    <div>
                      <input
                        checked="checked"
                        class="leaflet-control-layers-selector"
                        name="leaflet-base-layers_45"
                        type="radio"
                      />
                      <span>
                         BC Government
                      </span>
                    </div>
                  </label>
                  <label>
                    <div>
                      <input
                        class="leaflet-control-layers-selector"
                        name="leaflet-base-layers_45"
                        type="radio"
                      />
                      <span>
                         Esri Imagery
                      </span>
                    </div>
                  </label>
                </div>
                <div
                  class="leaflet-control-layers-separator"
                  style="display: none;"
                />
                <div
                  class="leaflet-control-layers-overlays"
                />
              </section>
            </div>
            <div
              class="leaflet-control-attribution leaflet-control"
            >
              <a
                href="https://leafletjs.com"
                title="A JS library for interactive maps"
              >
                Leaflet
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`ProjectLocationForm renders correctly with errors on fields 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-37"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
      >
        <fieldset
          class="MuiFormControl-root MuiFormControl-fullWidth"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
            data-shrink="true"
            id="nrm-region-select-label"
          >
            NRM Region
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               *
            </span>
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          >
            <div
              aria-haspopup="listbox"
              aria-label="NRM Region"
              aria-labelledby="nrm-region-select-label nrm-region-select"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
              id="nrm-region-select"
              role="button"
              tabindex="0"
            >
              <span>
                ​
              </span>
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              name="location.region"
              required=""
              tabindex="-1"
              value="Omineca"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-38 MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled-40 PrivateNotchedOutline-legendNotched-41"
              >
                <span>
                  NRM Region
                </span>
              </legend>
            </fieldset>
          </div>
          <p
            class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled Mui-required"
          />
        </fieldset>
      </div>
    </div>
  </div>
  <div
    class="MuiBox-root MuiBox-root-42"
  >
    <fieldset
      class="MuiFormControl-root"
    >
      <legend
        class="MuiFormLabel-root Mui-required"
      >
        Is this location a priority area?
        <span
          aria-hidden="true"
          class="MuiFormLabel-asterisk"
        >
           *
        </span>
      </legend>
      <div
        class="MuiBox-root MuiBox-root-43"
      >
        <div
          aria-label="Location Priority"
          class="MuiFormGroup-root"
          role="radiogroup"
        >
          <label
            class="MuiFormControlLabel-root"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-44 MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-checked-45 Mui-checked MuiIconButton-colorPrimary"
            >
              <span
                class="MuiIconButton-label"
              >
                <input
                  checked=""
                  class="PrivateSwitchBase-input-47"
                  name="location.priority"
                  required=""
                  type="radio"
                  value="false"
                />
                <div
                  class="PrivateRadioButtonIcon-root-48 PrivateRadioButtonIcon-checked-50"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-49 MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                    />
                  </svg>
                </div>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
            <span
              class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
            >
              No
            </span>
          </label>
          <label
            class="MuiFormControlLabel-root"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-44 MuiRadio-root MuiRadio-colorPrimary MuiIconButton-colorPrimary"
            >
              <span
                class="MuiIconButton-label"
              >
                <input
                  class="PrivateSwitchBase-input-47"
                  name="location.priority"
                  required=""
                  type="radio"
                  value="true"
                />
                <div
                  class="PrivateRadioButtonIcon-root-48"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-49 MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                    />
                  </svg>
                </div>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
            <span
              class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
            >
              Yes
            </span>
          </label>
          <p
            class="MuiFormHelperText-root Mui-required"
          />
        </div>
      </div>
    </fieldset>
  </div>
  <fieldset
    class="MuiBox-root MuiBox-root-51"
  >
    <legend
      class="MuiTypography-root MuiTypography-body1"
    >
      Project Boundary
    </legend>
    <div
      class="MuiBox-root MuiBox-root-52"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
      >
        Upload a shapefile or use the drawing tools on the map to define your project boundary (KML or shapefiles accepted).
      </p>
    </div>
    <div
      class="MuiBox-root MuiBox-root-53"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-outlinedSizeLarge MuiButton-sizeLarge"
        data-testid="project-boundary-upload"
        role="button"
        tabindex="0"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeLarge"
          >
            <svg
              role="presentation"
              style="width: 1.5rem; height: 1.5rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M2 12H4V17H20V12H22V17C22 18.11 21.11 19 20 19H4C2.9 19 2 18.11 2 17V12M12 2L6.46 7.46L7.88 8.88L11 5.75V15H13V5.75L16.13 8.88L17.55 7.45L12 2Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          Upload Boundary
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
    </div>
    <div
      class="MuiBox-root MuiBox-root-54"
    >
      <div
        class="leaflet-container leaflet-grab leaflet-touch-drag"
        id="project_location_map"
        style="height: 100%; position: relative;"
        tabindex="0"
      >
        <div
          class="leaflet-pane leaflet-map-pane"
          style="left: 0px; top: 0px;"
        >
          <div
            class="leaflet-pane leaflet-tile-pane"
          >
            <div
              class="leaflet-layer "
              style="z-index: 1;"
            >
              <div
                class="leaflet-tile-container leaflet-zoom-animated"
                style="z-index: 18; left: 0px; top: 0px;"
              >
                <img
                  alt=""
                  class="leaflet-tile"
                  role="presentation"
                  src="https://maps.gov.bc.ca/arcgis/rest/services/province/roads_wm/MapServer/tile/5/10/4"
                  style="width: 256px; height: 256px; left: -159px; top: -31px;"
                />
              </div>
            </div>
          </div>
          <div
            class="leaflet-pane leaflet-shadow-pane"
          >
            <img
              alt=""
              class="leaflet-marker-shadow leaflet-zoom-hide"
              src="marker-shadow.png"
              style="margin-left: -12px; margin-top: -41px; width: 41px; height: 41px; left: 5771px; top: 1274px;"
            />
          </div>
          <div
            class="leaflet-pane leaflet-overlay-pane"
          />
          <div
            class="leaflet-pane leaflet-marker-pane"
          >
            <img
              alt=""
              class="leaflet-marker-icon leaflet-zoom-hide leaflet-interactive"
              src="marker-icon.png"
              style="margin-left: -12px; margin-top: -41px; width: 25px; height: 41px; left: 5771px; top: 1274px; z-index: 1274;"
              tabindex="0"
            />
          </div>
          <div
            class="leaflet-pane leaflet-tooltip-pane"
          />
          <div
            class="leaflet-pane leaflet-popup-pane"
          />
        </div>
        <div
          class="leaflet-control-container"
        >
          <div
            class="leaflet-top leaflet-left"
          >
            <div
              class="leaflet-control-zoom leaflet-bar leaflet-control"
            >
              <a
                aria-label="Zoom in"
                class="leaflet-control-zoom-in"
                href="#"
                role="button"
                title="Zoom in"
              >
                +
              </a>
              <a
                aria-label="Zoom out"
                class="leaflet-control-zoom-out"
                href="#"
                role="button"
                title="Zoom out"
              >
                −
              </a>
            </div>
            <div
              class="leaflet-control-fullscreen leaflet-bar leaflet-control"
            >
              <a
                class="leaflet-control-fullscreen-button leaflet-bar-part"
                href="#"
                title="View Fullscreen"
              />
            </div>
          </div>
          <div
            class="leaflet-top leaflet-right"
          >
            <div
              class="leaflet-draw leaflet-control"
            >
              <div
                class="leaflet-draw-section"
              >
                <div
                  class="leaflet-draw-toolbar leaflet-bar leaflet-draw-toolbar-top"
                >
                  <a
                    class="leaflet-draw-draw-polyline"
                    href="#"
                    title="Draw a polyline"
                  >
                    <span
                      class="sr-only"
                    >
                      Draw a polyline
                    </span>
                  </a>
                  <a
                    class="leaflet-draw-draw-polygon"
                    href="#"
                    title="Draw a polygon"
                  >
                    <span
                      class="sr-only"
                    >
                      Draw a polygon
                    </span>
                  </a>
                  <a
                    class="leaflet-draw-draw-rectangle"
                    href="#"
                    title="Draw a rectangle"
                  >
                    <span
                      class="sr-only"
                    >
                      Draw a rectangle
                    </span>
                  </a>
                  <a
                    class="leaflet-draw-draw-marker"
                    href="#"
                    title="Draw a marker"
                  >
                    <span
                      class="sr-only"
                    >
                      Draw a marker
                    </span>
                  </a>
                  <a
                    class="leaflet-draw-draw-circlemarker"
                    href="#"
                    title="Draw a circlemarker"
                  >
                    <span
                      class="sr-only"
                    >
                      Draw a circlemarker
                    </span>
                  </a>
                </div>
                <ul
                  class="leaflet-draw-actions"
                />
              </div>
              <div
                class="leaflet-draw-section"
              >
                <div
                  class="leaflet-draw-toolbar leaflet-bar"
                >
                  <a
                    class="leaflet-draw-edit-edit"
                    href="#"
                    title="Edit layers"
                  >
                    <span
                      class="sr-only"
                    >
                      Edit layers
                    </span>
                  </a>
                  <a
                    class="leaflet-draw-edit-remove"
                    href="#"
                    title="Delete layers"
                  >
                    <span
                      class="sr-only"
                    >
                      Delete layers
                    </span>
                  </a>
                </div>
                <ul
                  class="leaflet-draw-actions"
                />
              </div>
            </div>
          </div>
          <div
            class="leaflet-bottom leaflet-left"
          />
          <div
            class="leaflet-bottom leaflet-right"
          >
            <div
              aria-haspopup="true"
              class="leaflet-control-layers leaflet-control"
            >
              <a
                class="leaflet-control-layers-toggle"
                href="#"
                title="Layers"
              />
              <section
                class="leaflet-control-layers-list"
              >
                <div
                  class="leaflet-control-layers-base"
                >
                  <label>
                    <div>
                      <input
                        checked="checked"
                        class="leaflet-control-layers-selector"
                        name="leaflet-base-layers_97"
                        type="radio"
                      />
                      <span>
                         BC Government
                      </span>
                    </div>
                  </label>
                  <label>
                    <div>
                      <input
                        class="leaflet-control-layers-selector"
                        name="leaflet-base-layers_97"
                        type="radio"
                      />
                      <span>
                         Esri Imagery
                      </span>
                    </div>
                  </label>
                </div>
                <div
                  class="leaflet-control-layers-separator"
                  style="display: none;"
                />
                <div
                  class="leaflet-control-layers-overlays"
                />
              </section>
            </div>
            <div
              class="leaflet-control-attribution leaflet-control"
            >
              <a
                href="https://leafletjs.com"
                title="A JS library for interactive maps"
              >
                Leaflet
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`ProjectLocationForm renders correctly with existing location values 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-19"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
      >
        <fieldset
          class="MuiFormControl-root MuiFormControl-fullWidth"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
            data-shrink="true"
            id="nrm-region-select-label"
          >
            NRM Region
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               *
            </span>
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          >
            <div
              aria-haspopup="listbox"
              aria-label="NRM Region"
              aria-labelledby="nrm-region-select-label nrm-region-select"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
              id="nrm-region-select"
              role="button"
              tabindex="0"
            >
              <span>
                ​
              </span>
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              name="location.region"
              required=""
              tabindex="-1"
              value="Omineca"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-20 MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled-22 PrivateNotchedOutline-legendNotched-23"
              >
                <span>
                  NRM Region
                </span>
              </legend>
            </fieldset>
          </div>
          <p
            class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled Mui-required"
          />
        </fieldset>
      </div>
    </div>
  </div>
  <div
    class="MuiBox-root MuiBox-root-24"
  >
    <fieldset
      class="MuiFormControl-root"
    >
      <legend
        class="MuiFormLabel-root Mui-required"
      >
        Is this location a priority area?
        <span
          aria-hidden="true"
          class="MuiFormLabel-asterisk"
        >
           *
        </span>
      </legend>
      <div
        class="MuiBox-root MuiBox-root-25"
      >
        <div
          aria-label="Location Priority"
          class="MuiFormGroup-root"
          role="radiogroup"
        >
          <label
            class="MuiFormControlLabel-root"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-26 MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-checked-27 Mui-checked MuiIconButton-colorPrimary"
            >
              <span
                class="MuiIconButton-label"
              >
                <input
                  checked=""
                  class="PrivateSwitchBase-input-29"
                  name="location.priority"
                  required=""
                  type="radio"
                  value="false"
                />
                <div
                  class="PrivateRadioButtonIcon-root-30 PrivateRadioButtonIcon-checked-32"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-31 MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                    />
                  </svg>
                </div>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
            <span
              class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
            >
              No
            </span>
          </label>
          <label
            class="MuiFormControlLabel-root"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-26 MuiRadio-root MuiRadio-colorPrimary MuiIconButton-colorPrimary"
            >
              <span
                class="MuiIconButton-label"
              >
                <input
                  class="PrivateSwitchBase-input-29"
                  name="location.priority"
                  required=""
                  type="radio"
                  value="true"
                />
                <div
                  class="PrivateRadioButtonIcon-root-30"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-31 MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                    />
                  </svg>
                </div>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
            <span
              class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
            >
              Yes
            </span>
          </label>
          <p
            class="MuiFormHelperText-root Mui-required"
          />
        </div>
      </div>
    </fieldset>
  </div>
  <fieldset
    class="MuiBox-root MuiBox-root-33"
  >
    <legend
      class="MuiTypography-root MuiTypography-body1"
    >
      Project Boundary
    </legend>
    <div
      class="MuiBox-root MuiBox-root-34"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
      >
        Upload a shapefile or use the drawing tools on the map to define your project boundary (KML or shapefiles accepted).
      </p>
    </div>
    <div
      class="MuiBox-root MuiBox-root-35"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-outlinedSizeLarge MuiButton-sizeLarge"
        data-testid="project-boundary-upload"
        role="button"
        tabindex="0"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeLarge"
          >
            <svg
              role="presentation"
              style="width: 1.5rem; height: 1.5rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M2 12H4V17H20V12H22V17C22 18.11 21.11 19 20 19H4C2.9 19 2 18.11 2 17V12M12 2L6.46 7.46L7.88 8.88L11 5.75V15H13V5.75L16.13 8.88L17.55 7.45L12 2Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          Upload Boundary
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
    </div>
    <div
      class="MuiBox-root MuiBox-root-36"
    >
      <div
        class="leaflet-container leaflet-grab leaflet-touch-drag"
        id="project_location_map"
        style="height: 100%; position: relative;"
        tabindex="0"
      >
        <div
          class="leaflet-pane leaflet-map-pane"
          style="left: 0px; top: 0px;"
        >
          <div
            class="leaflet-pane leaflet-tile-pane"
          >
            <div
              class="leaflet-layer "
              style="z-index: 1;"
            >
              <div
                class="leaflet-tile-container leaflet-zoom-animated"
                style="z-index: 18; left: 0px; top: 0px;"
              >
                <img
                  alt=""
                  class="leaflet-tile"
                  role="presentation"
                  src="https://maps.gov.bc.ca/arcgis/rest/services/province/roads_wm/MapServer/tile/5/10/4"
                  style="width: 256px; height: 256px; left: -159px; top: -31px;"
                />
              </div>
            </div>
          </div>
          <div
            class="leaflet-pane leaflet-shadow-pane"
          >
            <img
              alt=""
              class="leaflet-marker-shadow leaflet-zoom-hide"
              src="marker-shadow.png"
              style="margin-left: -12px; margin-top: -41px; width: 41px; height: 41px; left: 5771px; top: 1274px;"
            />
          </div>
          <div
            class="leaflet-pane leaflet-overlay-pane"
          />
          <div
            class="leaflet-pane leaflet-marker-pane"
          >
            <img
              alt=""
              class="leaflet-marker-icon leaflet-zoom-hide leaflet-interactive"
              src="marker-icon.png"
              style="margin-left: -12px; margin-top: -41px; width: 25px; height: 41px; left: 5771px; top: 1274px; z-index: 1274;"
              tabindex="0"
            />
          </div>
          <div
            class="leaflet-pane leaflet-tooltip-pane"
          />
          <div
            class="leaflet-pane leaflet-popup-pane"
          />
        </div>
        <div
          class="leaflet-control-container"
        >
          <div
            class="leaflet-top leaflet-left"
          >
            <div
              class="leaflet-control-zoom leaflet-bar leaflet-control"
            >
              <a
                aria-label="Zoom in"
                class="leaflet-control-zoom-in"
                href="#"
                role="button"
                title="Zoom in"
              >
                +
              </a>
              <a
                aria-label="Zoom out"
                class="leaflet-control-zoom-out"
                href="#"
                role="button"
                title="Zoom out"
              >
                −
              </a>
            </div>
            <div
              class="leaflet-control-fullscreen leaflet-bar leaflet-control"
            >
              <a
                class="leaflet-control-fullscreen-button leaflet-bar-part"
                href="#"
                title="View Fullscreen"
              />
            </div>
          </div>
          <div
            class="leaflet-top leaflet-right"
          >
            <div
              class="leaflet-draw leaflet-control"
            >
              <div
                class="leaflet-draw-section"
              >
                <div
                  class="leaflet-draw-toolbar leaflet-bar leaflet-draw-toolbar-top"
                >
                  <a
                    class="leaflet-draw-draw-polyline"
                    href="#"
                    title="Draw a polyline"
                  >
                    <span
                      class="sr-only"
                    >
                      Draw a polyline
                    </span>
                  </a>
                  <a
                    class="leaflet-draw-draw-polygon"
                    href="#"
                    title="Draw a polygon"
                  >
                    <span
                      class="sr-only"
                    >
                      Draw a polygon
                    </span>
                  </a>
                  <a
                    class="leaflet-draw-draw-rectangle"
                    href="#"
                    title="Draw a rectangle"
                  >
                    <span
                      class="sr-only"
                    >
                      Draw a rectangle
                    </span>
                  </a>
                  <a
                    class="leaflet-draw-draw-marker"
                    href="#"
                    title="Draw a marker"
                  >
                    <span
                      class="sr-only"
                    >
                      Draw a marker
                    </span>
                  </a>
                  <a
                    class="leaflet-draw-draw-circlemarker"
                    href="#"
                    title="Draw a circlemarker"
                  >
                    <span
                      class="sr-only"
                    >
                      Draw a circlemarker
                    </span>
                  </a>
                </div>
                <ul
                  class="leaflet-draw-actions"
                />
              </div>
              <div
                class="leaflet-draw-section"
              >
                <div
                  class="leaflet-draw-toolbar leaflet-bar"
                >
                  <a
                    class="leaflet-draw-edit-edit"
                    href="#"
                    title="Edit layers"
                  >
                    <span
                      class="sr-only"
                    >
                      Edit layers
                    </span>
                  </a>
                  <a
                    class="leaflet-draw-edit-remove"
                    href="#"
                    title="Delete layers"
                  >
                    <span
                      class="sr-only"
                    >
                      Delete layers
                    </span>
                  </a>
                </div>
                <ul
                  class="leaflet-draw-actions"
                />
              </div>
            </div>
          </div>
          <div
            class="leaflet-bottom leaflet-left"
          />
          <div
            class="leaflet-bottom leaflet-right"
          >
            <div
              aria-haspopup="true"
              class="leaflet-control-layers leaflet-control"
            >
              <a
                class="leaflet-control-layers-toggle"
                href="#"
                title="Layers"
              />
              <section
                class="leaflet-control-layers-list"
              >
                <div
                  class="leaflet-control-layers-base"
                >
                  <label>
                    <div>
                      <input
                        checked="checked"
                        class="leaflet-control-layers-selector"
                        name="leaflet-base-layers_72"
                        type="radio"
                      />
                      <span>
                         BC Government
                      </span>
                    </div>
                  </label>
                  <label>
                    <div>
                      <input
                        class="leaflet-control-layers-selector"
                        name="leaflet-base-layers_72"
                        type="radio"
                      />
                      <span>
                         Esri Imagery
                      </span>
                    </div>
                  </label>
                </div>
                <div
                  class="leaflet-control-layers-separator"
                  style="display: none;"
                />
                <div
                  class="leaflet-control-layers-overlays"
                />
              </section>
            </div>
            <div
              class="leaflet-control-attribution leaflet-control"
            >
              <a
                href="https://leafletjs.com"
                title="A JS library for interactive maps"
              >
                Leaflet
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;
